<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvww_ImgNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news"
                    android:layout_width="110dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/var_contdesc"
                    android:scaleType="centerCrop"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    app:srcCompat="@drawable/img_news2" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvw_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/judul_headline"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cvww_ImgNews"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvw_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/deskripsi_headline"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/cvww_ImgNews"
                app:layout_constraintTop_toBottomOf="@id/tvw_title" />

            <TextView
                android:id="@+id/img_star"
                android:layout_width="27dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/var_contdesc"
                android:tint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_star"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>