<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <!--region Top Image and Button News-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/var_contdesc"
            android:scaleType="matrix"
            android:src="@drawable/img_news1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/var_contdesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_back"/>

        <ImageView
            android:id="@+id/btn_Size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/var_contdesc"
            app:srcCompat="@drawable/ic_size"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toStartOf="@id/btn_Share"
            app:layout_constraintTop_toTopOf="@id/btn_back"/>

        <ImageView
            android:id="@+id/btn_Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/var_contdesc"
            app:srcCompat="@drawable/ic_share"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_Size"
            app:layout_constraintEnd_toStartOf="@id/btn_Star"
            app:layout_constraintTop_toTopOf="@id/btn_Size"/>

        <ImageView
            android:id="@+id/btn_Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/var_contdesc"
            app:srcCompat="@drawable/ic_star"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/btn_Share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_Share" />

        <ImageView
            android:id="@+id/btn_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/var_contdesc"
            app:srcCompat="@drawable/ic_zoom"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/img_toolbar"
            app:layout_constraintStart_toStartOf="@id/img_toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--endregion-->

    <ScrollView
        android:id="@+id/scv_news"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="@id/lay_header"
        app:layout_constraintTop_toBottomOf="@id/lay_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_FotoDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:text="@string/fotodesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_detiknews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/detiknews"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_FotoDesc"/>

            <TextView
                android:id="@+id/txt_TitleNews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/judul_berita"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detiknews" />

            <View
                android:id="@+id/vw_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#B6B6B6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_TitleNews" />

            <TextView
                android:id="@+id/txt_Reporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Yudistira Saputra  - detikNews"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vw_line" />

            <TextView
                android:id="@+id/txt_PostTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:text="Sabtu, 23 Mei 2020 17.30 WIB"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_Reporter" />

            <TextView
                android:id="@+id/txt_KontenNews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_PostTime"/>

            <TextView
                android:id="@+id/txt_BacaJuga"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Baca Juga : Judul Berita Terkait"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_KontenNews" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>